fix alignment of display text to the bottom right of display div

--- a/styles.css
+++ b/styles.css
@@ -147,6 +147,9 @@ button {
   margin: 0 auto;
   width: 300px;
   height: 70px;
+  display: flex;
+  align-items: flex-end;
+  justify-content: flex-end;
 }
 
 .headerWrapper {
